test/negative/703_variant_pat_nonvariant.fx
// expect: variant
val x = match 5 { | Some y => 1 | _ => 0 }
println(x)
